Add Lunch Favorites section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <h2>Breakfast Favorites</h2>
         <ul>
             <li><a href="recipes/feta-fried-eggs.html">Feta Fried Eggs</a></li>
+            <li><a href="recipes/chiles-rellenos-souffle.html">Chiles Rellenos Souffle</a></li>
+        </ul>
+        <h2>Lunch Favorites</h2>
+        <ul>
+            <li><a href="recipes/salmon-bowl.html">Salmon Bowl</a></li>
         </ul>
     </body>
 </html>
